--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsdom": "^26.1.0",
     "nanoid": "^5.1.5",
     "next": "15.3.3",
+    "puppeteer": "^24.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1"
